test/types/records/bugs/initeq-forwarding-record.good
initeq-forwarding-record.chpl:5: In function 'main':
initeq-forwarding-record.chpl:6: error: could not find a copy initializer ('init=') for type 'R' from type 'int(64)'
initeq-forwarding-record.chpl:1: note: this candidate did not match: R.init=(other: R)
initeq-forwarding-record.chpl:6: note: because actual argument #1 with type 'int(64)'
initeq-forwarding-record.chpl:1: note: is passed to formal 'other: R'
