test/types/records/bugs/initeq-forwarding-record.chpl
record R {
  forwarding var i: int;
}

proc main() {
  var r: R = 5;
}
